@@ -12,11 +12,13 @@ Changes from 0.3 to 0.4
 - Added a `limit` paramater to `iter`, `where` and `wheretrue` iterators
   of carray object and to `iter` and `where` of ctable object.
 
-- Initial support for multidimensional carrays.
+- Full support for multidimensional carrays.  All types are supported,
+  except the 'object' type (that applies to unidimensional carrays too).
 
 - Added a new `reshape()` for reshaping to new (multidimensional)
   carrays.  This supports the same functionality than `reshape()` in
   NumPy.
+
 
 Changes from 0.2 to 0.3
 =======================
